--- a/LeenAutoCovadis.blazor/Pages/Home.razor
+++ b/LeenAutoCovadis.blazor/Pages/Home.razor
@@ -5,7 +5,7 @@
 @using LeenAutoCovadis.blazor.Components
 
 <PageTitle>Home</PageTitle>
-<PageHeader Size="PageHeader.Sizes.H1">Users</PageHeader>
+<PageHeader><h5>Users</h5></PageHeader>
 
 @if (Users != null)
 {
