--- a/LeenAutoCovadis.blazor/_Imports.razor
+++ b/LeenAutoCovadis.blazor/_Imports.razor
@@ -8,3 +8,4 @@
 @using Microsoft.JSInterop
 @using LeenAutoCovadis.blazor
 @using LeenAutoCovadis.blazor.Layout
+@using Microsoft.AspNetCore.Components.Authorization
